Fixed balloon mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -336,7 +336,7 @@ div.center {
 }
 .round-2 {
   right:40px;
-  bottom:-85px
+  bottom:-85px;
 }
 .round-2:before {
   content: '';
@@ -348,6 +348,27 @@ div.center {
   width: 0;
   z-index: 1;
   margin-left: -13px;
+  top: -25px;
+  left: 85%;
+}
+.round-3 {
+  right:135px;
+  bottom:-115px;
+  height:90px;  
+}
+.round-3 div {  
+  margin-top: -32%;
+}
+.round-3:before {
+  content: '';
+  position: absolute;
+  border-style: solid;
+  border-width: 0 13px 24px;
+  border-color: #FFFFFF transparent;
+  display: block;
+  width: 0;
+  z-index: 1;
+  margin-left: -55px;
   top: -25px;
   left: 85%;
 }
